--- a/src/main/resources/db/v1.0/V1__01_create_tables.yml
+++ b/src/main/resources/db/v1.0/V1__01_create_tables.yml
@@ -68,7 +68,7 @@ databaseChangeLog:
                   name: IMAGE_NEWS_ID
                   type: INT
                   constraints:
-                    unique: true
+                    primaryKey: true
                     nullable: false
               - column:
                   name: NEWS_ID
@@ -78,7 +78,7 @@ databaseChangeLog:
                   type: UUID
                   computed: true
                   constraints:
-                    primaryKey: true
+
               - column:
                   name: SIZE_IMAGE
                   type: VARCHAR(15)
@@ -93,9 +93,10 @@ databaseChangeLog:
                   name: IMAGE_ID
                   type: UUID
                   computed: true
-                  defaultValue: gen_random_uuid()
+                  #  defaultValue: gen_random_uuid()
                   constraints:
                     nullable: false
+                    primaryKey: true
               - column:
                   name: URL
                   type: VARCHAR(255)
@@ -118,6 +119,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     unique: true
+                    primaryKey: true
               - column:
                   name: NAME_CATEGORY
                   type: VARCHAR(40)
@@ -134,6 +136,7 @@ databaseChangeLog:
                   name: STATUS_ID
                   type: INT
                   constraints:
+                    primaryKey: true
                     nullable: false
                     unique: true
               - column:
@@ -149,28 +152,28 @@ databaseChangeLog:
       changes:
         - addForeignKeyConstraint:
             constraintName: FK_1
-            baseTableName: CATEGORY
+            baseTableName: NEWS
             baseColumnNames: CATEGORY_ID
-            referencedTableName: NEWS
+            referencedTableName: CATEGORY
             referencedColumnNames: CATEGORY_ID
 
         - addForeignKeyConstraint:
             constraintName: FK_2
-            baseTableName: STATUS
+            baseTableName: NEWS
             baseColumnNames: STATUS_ID
-            referencedTableName: NEWS
+            referencedTableName: STATUS
             referencedColumnNames: STATUS_ID
 
         - addForeignKeyConstraint:
             constraintName: FK_3
-            baseTableName: NEWS
+            baseTableName: IMAGE_NEWS
             baseColumnNames: NEWS_ID
-            referencedTableName: IMAGE_NEWS
+            referencedTableName: NEWS
             referencedColumnNames: NEWS_ID
 
         - addForeignKeyConstraint:
             constraintName: FK_4
-            baseTableName: IMAGE
+            baseTableName: IMAGE_NEWS
             baseColumnNames: IMAGE_ID
-            referencedTableName: IMAGE_NEWS
+            referencedTableName: IMAGE
             referencedColumnNames: IMAGE_ID
