--- a/src/main/resources/db/v1.0/changelog-v1.0-cumulative.yaml
+++ b/src/main/resources/db/v1.0/changelog-v1.0-cumulative.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - include:
-      file: classpath:db/v1.0/V1__01_create_tables.yml
+      file: classpath:db/v1.0/V1__01_create_tables_news.yml
   - include:
       file: classpath:db/v1.0/V1__02_insert_into_tables.yml
